--- a/83f7e85aabb041bdb160acbd9022a806.opf/meta.yml
+++ b/83f7e85aabb041bdb160acbd9022a806.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     307ae5fcf4d4493dbf38ecc20d6ecb51:
       base_file: v078.txt
       image_group_id: I1PD95924
-      title: ''
+      title: ཆོས་མངོན་པའི་མཛོད་ཀྱི་ཚིག་ལེའུར་བྱས་པ།
       total_pages: 1433
       volume_number: 79
